--- a/website/pricing.html
+++ b/website/pricing.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing</title>
     <p>Iriarte</p>
+    <p>Soto</p>
 </head>
 <body>
     
