creado e integrado services.html

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-          <header id="header" class="header d-flex align-items-center fixed-top">
+           <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
@@ -28,8 +28,8 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="home.html" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#team">Team</a></li>
