--- a/website/about.html
+++ b/website/about.html
@@ -78,19 +78,19 @@
       </nav>
 
       <a class="btn-getstarted" href="#about">Get Started</a>
-
     </div>
   </header>
 
   <main class="main">
-
+    <div>
+        <br>
+    </div>
     <!-- About Section -->
-    <section id="hero" class="hero section">
+    <section id="about" class="about section">
 
       <div class="container">
 
         <div class="row gy-4">
-
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
             <p class="who-we-are">Who We Are</p>
             <h3>Unleashing Potential with Creative Strategy</h3>
