--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
     <!-- Hero Section -->
-    <section id="hero" class="hero section">
+    <section id="home" class="home section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
