--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
           <li><a href="home.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
 
-          <li><a href="#services">Services</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#team">Team</a></li>
