--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="#home" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#team">Team</a></li>
