--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
           <li><a href="home.html" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
           <li><a href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
