--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@
      
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="home.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="home.html" >Home</a></li>
+          <li><a href="about.html" class="active">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="pricing.html">Pricing</a></li>
