Update de archivo prueba.html

--- a/prueba.html
+++ b/prueba.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Titulo desde github</title>
 </head>
 <body>
     <h1>Cambios locales</h1>
+    <p>Otro texto modificado desde github</p>
 </body>
 </html>
