--- a/prueba.html
+++ b/prueba.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Cambios locales</h1>
     <p>Otro texto modificado desde github</p>
+    <p>Otro parrafo desde local</p>
 </body>
 </html>
